--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>My fine hobbies</h1>
-    <p>I enjoy many things with my spare time.I don't have much spare time, but when i do, you can find me doing one of these things.</p>
+    <p>I enjoy doing <em> many things</em> with my spare time.I don't have much spare time, but when i do, you can find me doing one of these things.</p>
     <ul>
       <li>Playing music</li>
       <li>Hiking</li>
@@ -15,5 +15,10 @@
       <li>Teaching</li>
     </ul>
     <p>Visit my <a href="index.html">index page</a>. </p>
+    <img src="image/blog1.jpg" alt="weird alien eating popcorn.">
+    <blockquote>
+    <p>some smart person said<strong> a really smart thing</strong> </p>
+    <cite>smart person</cite> 
+    </blockquote>
 </body>
 </html>
