--- a/Olivia.html
+++ b/Olivia.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>All about me</h1>
-   <p>Heyy y'all my name is olivia and I'm 17 yrs old sson will be turning 18 .I like watching series,movies and animes. I also like to read fictional novels. </p>
+   <p>Heyy y'all my name is olivia and I'm 17 yrs old soon will be turning 18 .I like watching series,movies and animes. I also like to read fictional novels. </p>
 
    <p>I would like to change the world by becoming a great web developer and accomplish major tasks.</p>
    <ul>Things to know about me
